WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
11694
XSLT output method does not default to HTML when the target document is HTML
https://bugs.webkit.org/show_bug.cgi?id=11694
Summary
XSLT output method does not default to HTML when the target document is HTML
Alex Taylor
Reported
2006-11-26 20:53:03 PST
The rows in this "LiveGrid demo" don't look correct, they don't appear to have been transformed or had style applied. Result differs from Firefox.
Attachments
test case
(626 bytes, text/html)
2006-11-27 10:04 PST
,
Alexey Proskuryakov
no flags
Details
proposed fix
(5.80 KB, patch)
2006-11-27 11:43 PST
,
Alexey Proskuryakov
hyatt
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2006-11-27 10:04:10 PST
Created
attachment 11644
[details]
test case
Alexey Proskuryakov
Comment 2
2006-11-27 10:12:30 PST
The problem here is that the result of the transformation is plain XML, without an XHTML namespace. So, tags have no meaning when the result is inserted into the HTML document with appendChild(). I don't know why Firefox styles it, maybe they have some good reason? To work around this, add an XSLT output directive: "<xsl:output method="html"/>".
Alexey Proskuryakov
Comment 3
2006-11-27 10:23:32 PST
I think I know the reason - Firefox defaults the output method to HTML because the target document of transformToFragment() is an HTML one.
Alexey Proskuryakov
Comment 4
2006-11-27 11:43:02 PST
Created
attachment 11645
[details]
proposed fix
Dave Hyatt
Comment 5
2006-11-27 13:12:45 PST
Comment on
attachment 11645
[details]
proposed fix r=me
Alexey Proskuryakov
Comment 6
2006-11-27 21:45:50 PST
Committed revision 17902.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug