        Reviewed by Hyatt.

http://bugs.webkit.org/show_bug.cgi?id=11694
        XSLT output method does not default to HTML when the target document is HTML

        Test: fast/xsl/default-html.html

        * xml/XSLTProcessor.cpp:
        (WebCore::XSLTProcessor::transformToString): Make mimeType an input/output parameter,
        serving as a hint when the stylesheet doesn't specify the output method.
        (WebCore::XSLTProcessor::transformToFragment): Set mimeType to text/html if the target
        document is HTML.



Canonical link: https://commits.webkit.org/15043@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@17902 268f45cc-cd09-0410-ab3c-d52691b4dbfc